2011-10-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.h src/command.c src/getcolor.c src/gplt_x11.c src/save.c
	src/set.c src/show.c src/tables.c src/tables.h term/post.trm
	term/x11.trm demo/pm3d.dem docs/gnuplot.doc:

	New palette option "cubehelix". The is a family of palettes with the
	general property of combining N cycles of a color-wheel with a monotonic
	increase in overall intensity. This feature was suggested by Ingo Thies.
	See: D A Green (2011) "A colour scheme for the display of astronomical
	intensity images" http://arxiv.org/abs/1108.5083

2011-10-06  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/internal.c (f_sprintf): Always null-terminal a string written by
	the non-ANSI compliant MSVC++ routine _snprintf().

2011-10-03  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_options): When searching the list of graph windows
	the correct test is for window Id.

2011-10-03  Rich Seymour  <richseymour@users.sourceforge.net>

	* term/svg.trm: Look for strings " Bold" and/or " Italic" in font name
	and set the corresponding properties if found.  Patchset #3058920.

2011-10-03  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/post.trm (PS_options): Properly contain new variable in a
	block. Bug #3417716

	* src/Makefile.maint: New target makefile.awc.

	* src/makefile.all src/makefile.awc: Regenerated to include stats.c.

2011-10-02  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/Makefile.am src/command.c src/command.h src/show.c
	src/stats.c src/stats.h src/tables.c docs/gnuplot.doc:
	
	New command to generate a statistical summary of the data in a file.
	    stats "datafile" [using col1[:col2]] [nooutput] [name "PREFIX"]
	Data is read from the input file under the control of the same options
	used for 'plot' commands (e.g. xrange, yrange, using, index, every).
	The min/max/mean/stddev/quartiles of data from one or two data columns
	are printed to the terminal and stored in named variables.  These